# prettycli

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: 01_basic_cli.py  02_interactive_cli.py  03_ui_components.py  04_vscode_artifacts.py  05_statusbar.py
src/prettycli/: __init__.py  __main__.py  app.py  cli.py  command.py  context.py  ui.py  vscode.py
src/prettycli/config/: __init__.py  default.yaml
src/prettycli/subui/: __init__.py
src/prettycli/subui/layout/: __init__.py  bottom_toolbar.py  top_toolbar.py
src/prettycli/subui/widget/: __init__.py  echo_status.py  quote.py  runtime_status.py  statusbar.py  system_status.py
src/prettycli/testing/: __init__.py  assertions.py  mock.py  runner.py  session.py  shell.py
tests/: test_interactive.py  test_shell_session.py
tests/system/: mock_server.py  test_vscode_client.py
tests/unit/: test_cli.py  test_cli_completer.py  test_cli_shell.py  test_quote_widget.py  test_system_status.py
vscode-extension/: jest.config.js  package-lock.json  package.json
vscode-extension/coverage/: coverage-summary.json
vscode-extension/src/: apiServer.ts  extension.ts  panelManager.ts  pluginManager.ts  sessionManager.ts  types.ts
vscode-extension/src/renderers/: base.ts  chart.ts  diff.ts  file.ts  image.ts  index.ts  json.ts  markdown.ts  table.ts  web.ts
vscode-extension/tests/: pluginManager.test.ts  renderers.test.ts
vscode-extension/tests/__mocks__/: vscode.ts
