[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prettycli"
version = "0.1.0"
description = "A beautiful CLI framework for Python"
requires-python = ">=3.8"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "InquirerPy>=0.3.4",
    "pyyaml>=6.0",
    "prompt_toolkit>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]
vscode = [
    "websocket-client>=1.6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/prettycli"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.coverage.run]
source = ["src/prettycli"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
fail_under = 95
